--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -6,6 +6,8 @@
   display: flex;
   align-items: center;
   font-size: 18px;
+  // max-width: 1060px;
+  // margin: auto;
 
   img {
     display: inline-block;
